<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitleRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="18dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/editTextEmailRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPasswordFromRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:padding="18dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextHowOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/how_old_are_you_hint"
            android:inputType="number"
            android:padding="18dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/purple_500"
            android:padding="18dp"
            android:text="@string/sign_up_button"
            android:textColor="@color/white" />


    </LinearLayout>


</ScrollView>